# symop

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONRIBUTING.md  LICENSE  Makefile  README.md  Untitled.ipynb  importlinter.ini  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml
_old_examples/: Untitled.ipynb  test.py
_old_examples/algebra/: KetPolynomials_KetStates.ipynb
_old_symop_proto  /: README.md
_old_symop_proto  /algebra/: __init__.py  operator_polynomial.py  polynomial.py  protocols.py
_old_symop_proto  /algebra/common/: signatures.py
_old_symop_proto  /algebra/density/: #apply_right.py#  .#apply_right.py  apply_left.py  apply_right.py  combine.py  inner.py  normalize_trace.py  overlap_right_left.py  partial_trace.py  pure.py  purity.py  scale.py  trace.py
_old_symop_proto  /algebra/expand/: monomial_times_word.py  word_times_monomial.py
_old_symop_proto  /algebra/ket/: apply.py  combine.py  from_ops.py  from_word.py  identity_coeff.py  inner.py  multiply.py  scale.py
_old_symop_proto  /algebra/op_poly/: combine.py  from_words.py  multiply.py
_old_symop_proto  /algebra/pretty/: density.py  ket.py  monomial.py  operator_polynomial.py
_old_symop_proto  /core/: __init__.py  monomial.py  operators.py  protocols.py  terms.py
_old_symop_proto  /core/pretty/: ladder.py  monomial.py  scalars.py  terms.py
_old_symop_proto  /devices/: base.py  io.py
_old_symop_proto  /envelopes/: #gaussian_envelope.py#  __init__.py  base.py  filtered_envelope.py  gaussian_envelope.py  protocols.py
_old_symop_proto  /envelopes/spectral_filters/: __init__.py  transfer.py
_old_symop_proto  /gaussian/: __init__.py  basis.py  core.py  evaluator.py  measurement.py  physicality.py
_old_symop_proto  /gaussian/devices/: __init__.py  _utils.py  amplifiers.py  base.py  beam_splitters.py  filters.py  loss.py
_old_symop_proto  /gaussian/maps/: __init__.py  base.py  bogoliubov.py  channel.py  channels.py  passive.py
_old_symop_proto  /gaussian/ops/: __init__.py  basis_change.py  bogoliubov.py  channel.py  channel_between_bases.py  common.py  gram_blocks.py  ladder_moments.py  measurement.py  passive.py  transform.py  utils.py
_old_symop_proto  /labels/: __init__.py  mode_label.py  path_label.py  polarization_label.py  protocols.py
_old_symop_proto  /rewrites/: linear_mode_unitary.py  protocols.py
_old_symop_proto  /rewrites/functions/: relabling.py  substitution.py  unitaries.py
_old_symop_proto  /state/: __init__.py  polynomial_state.py  protocols.py
_old_symop_proto  /state/pretty/: polynomial_state.py
_tst_old_/algebra/: test_operator_polynomial.py
_tst_old_/algebra/common/: test_signatures.py
_tst_old_/algebra/density/: test_combine.py  test_overlap_right_left.py  test_pure.py  test_scale.py  test_trace.py
_tst_old_/algebra/expand/: test_word_time_monomial.py
_tst_old_/algebra/ket/: test_from_ops.py  test_inner.py  test_multiply.py
_tst_old_/algebra/op_poly/: test_from_words.py  test_multiply.py
_tst_old_/core/: test_terms.py
_tst_old_/gaussian/: test_basis.py  test_evaluator.py  test_gaussian_core_structural_ops.py
_tst_old_/gaussian/maps/: test_bogoliubov_maps.py
_tst_old_/gaussian/ops/: test_channel.py
_tst_old_/labels/: test_mode_label.py  test_path_label.py
_tst_old_/rewrites/functions/: unitaries.py
_tst_old_/utils/: case.py
docs/: Makefile  requirements.txt
docs/source/: citation.rst  conf.py  index.rst  installation.rst  sg_execution_times.rst
docs/source/_autosummary/: symop_proto.algebra.rst  symop_proto.core.rst  symop_proto.envelopes.rst
docs/source/_static/: custom.css
docs/source/api/: ccr.rst  core.rst  devices.rst  index.rst  modes.rst  polynomial.rst
docs/source/architecture/: coverage.rst  devices.rst  index.rst  packages.rst
docs/source/auto/: index.rst  sg_execution_times.rst
docs/source/concepts/: index.rst
docs/source/examples/: index.rst
docs/source/tutorial/: index.rst
examples/: GALLERY_HEADER.rst  _common.py  eeavc.py  hom_example.ipynb  number_state_source_filter_example.ipynb  test.py  viz_test.ipynb
examples/algebra/: KetPolynomials_KetStates.ipynb
examples/ccr/: GALLERY_HEADER.rst  example_002_density_poly.py
examples/devices/: GALLERY_HEADER.rst  example_001_number_state_source.py  example_002_spectral_filter.py  example_004_beamsplitter.py  example_006_phase_shifter.py
examples/measurement_devices/: GALLERY_HEADER.rst  example_001_number_detector.py  example_002_coincidence_detection.py
examples/modes/: GALLERY_HEADER.rst  plot_001_gaussian_envelopes.py  plot_002_overlap_vs_delay.py  plot_004_gaussian_lowpass.py  plot_004_gaussian_mixture.py  plot_007_transfer_functions.py
src/symop/: __init__.py
src/symop/ccr/: __init__.py  _typing.py
symop_proto/algebra/: operator_polynomial.py  polynomial.py  protocols.py
symop_proto/core/: __init__.py  envelope.py  envelope_protocol.py  label_protocol.py  monomial.py  operators.py  protocols.py  terms.py
symop_proto/devices/: base.py  io.py
symop_proto/envelopes/: __init__.py  base.py  filtered_envelope.py  gaussian_envelope.py  protocols.py
symop_proto/gaussian/: basis.py  core.py  evaluator.py  measurement.py  physicality.py
symop_proto/labels/: __init__.py  mode_label.py  path_label.py  polarization_label.py  protocols.py
symop_proto/rewrites/: __init__.py  linear_mode_unitary.py  protocols.py
symop_proto/state/: __init__.py  polynomial_state.py  protocols.py
tests/: test_import.py
tests/algebra/: test_operator_polynomial.py  test_polynomial.py
tests/core/: test_monomial.py  test_monomials.py  test_operators.py  test_terms.py
tests/devices/: #test_apply_context.py#  .#test_apply_context.py  test_dispatch.py  test_registry.py  test_runtime.py
tests/envelopes/: test_base.py  test_gaussian_envelope.py
tests/gaussian/: test_basis.py  test_core.py  test_evaluator.py  test_gaussian_core_structural_ops.py  test_physicality.py
tests/helpers/: dummy_envelopes.py  rect_envelope.py
tests/labels/: test_mode_label.py  test_path_label.py  test_polarization_label.py
tests/utils/: case.py
(+687 files in other folders)
