[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "symop"
version = "0.1.0"
description = "Symbolic and Gaussian simulation framework for quantum optics and photonic systems"
authors = [{ name = "Simon Sekavcnik", email = "simon.sekavcnik@tum.de" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "typing-extensions>=4.0",
  "matplotlib"
]
keywords = ["quantum optics", "photonics", "simulation", "symbolic", "gaussian"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/tqsd/symop"
Documentation = "https://tqsd.github.com/symop/"
Repository = "https://github.com/tqsd/symop"
Issues = "https://github.com/tqsd/symop/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"symop" = ["py.typed"]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",     #  Static Type Checking
  "pytest",         #  Testing
  "pytest-cov",     #  Generate coverage reports
  "pre-commit",     #  Commit Checks
  "ruff",           #  Linting
  "coverage",       #  Test Coverage Reporting
  "tox",            #  Testing different python versions
]
docs = [
  "sphinx",         #  Documentation
  "furo",           #  Sphinx Theme
  "sphinx-gallery"  #  Example Gallery
]


[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
force-exclude = true
exclude = [
  "docs",
  "src/symop/viz",  # TODO: Add documentation in viz package
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "**/.#*",
  "**/*~",
  "**/#*#",
]

# Keep the rule set tight and useful during refactors.
[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # bugbear (common footguns)
  "SIM", # simplifications
  "D"
]
ignore = [
  "E501", # line length handled by formatter
  "D203",
  "D213",
  "D416",
]
